force-app/main/default/objects/jcvRules__mdt/jcvRules__mdt.object-meta.xml
<CustomObject>
    <label>jcvRule</label>
    <pluralLabel>jcvRule</pluralLabel>
</CustomObject>