force-app/main/default/objects/jcvRules__mdt/fields/jcvConfiguration__c.field-meta.xml
<CustomField>
    <fullName>jcvConfiguration__c</fullName>
    <label>jcvConfiguration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>