force-app/main/default/objects/jcvRules__mdt/fields/jsonRules__c.field-meta.xml
<CustomField>
    <fullName>jsonRules__c</fullName>
    <label>jsonRules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>