force-app/main/default/objects/jcvRules__mdt/fields/objectName__c.field-meta.xml
<CustomField>
    <fullName>objectName__c</fullName>
    <label>objectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>