force-app/main/default/objects/jcvRules__mdt/fields/profileName__c.field-meta.xml
<CustomField>
    <fullName>profileName__c</fullName>
    <label>profileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>