force-app/main/default/objects/jcvRules__mdt/fields/recordTypeName__c.field-meta.xml
<CustomField>
    <fullName>recordTypeName__c</fullName>
    <label>recordTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>